<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="186dp"
        android:layout_height="83dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/del"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonChangeToMinus"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/five"
        android:textSize="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="89dp"
        android:layout_height="177dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/equal"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoot" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/seven"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonRoot"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="7dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/root"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSeven"
        app:layout_constraintTop_toTopOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/divide"
        android:textSize="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonMultiply"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeToPlus" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="282dp"
        android:layout_height="57dp"
        android:layout_marginStart="7dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/zero"
        android:textSize="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonEqual"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/two"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonThree"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginStart="7dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/four"
        android:textSize="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonEqual"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/six"
        android:textSize="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonFive"
        app:layout_constraintTop_toBottomOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/one"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonTwo"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonChangeToMinus"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/addMinus"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonChangeToPlus"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/eight"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/minus"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonRoot"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/nine"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/multiply"
        android:textSize="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeToMinus" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/three"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/plus"
        android:textSize="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    <Button
        android:id="@+id/buttonChangeToPlus"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4F53BCCA"
        android:text="@string/addPlus"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="@+id/buttonDivide"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="378dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="TextView"
        android:textSize="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>